dvbsrc: map SYS_DVBC_ANNEX_A SYS_DVBC_ANNEX_AC for DVB API < 5.6

https://bugzilla.gnome.org/show_bug.cgi?id=721869